[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tradingview-webhook"
version = "0.1.0"
description = "Framework-agnostic Python package for receiving and validating TradingView webhook alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.95", "python-multipart>=0.0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingview_webhook*"]
